...
  String get handyman => 'Handyman';

  @override
  String get signIn => 'Sign In';

  @override
  String get signUp => 'Sign Up';

  @override
  String get hintFirstNameTxt => 'First Name';

  @override
  String get hintLastNameTxt => 'Last Name';
...
  String get hintReenterPasswordTxt => 'Re-enter Password';

  @override
  String get confirm => 'Confirm';

  @override
  String get forgotPassword => 'Forgot Password?';

  @override
  String get alreadyHaveAccountTxt => 'Already have an Account';

  @override
  String get rememberMe => 'Remember Me';
...
  String get hintChooseImage => 'Choose Image';

  @override
  String get customer => 'Customer';

  @override
  String get lblProfile => 'Profile';

  @override
  String get lblAllHandyman => "Handyman List";

  @override
  String get lblTime => 'Time';
...
